# rs-archaeology-helper-python

./: .gitignore  .pre-commit-config.yaml  CLI-planning.md  README.md  database_structure.md  example.py  pyproject.toml
.github/workflows/: python.yml
rs_arch/: aggregation.py  cli.py  library.py
rs_arch/models/: material.py
src/rs_arch/: aggregation.py  cli.py  library.py  main.py  models.py  player.py  scrape.py  user.py
src/rs_arch/models/: artefact.py  collection.py
tests/: test_main.py  test_models_api.py  test_placeholder.py
