[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rs-archaeology-helper"
description = "Helper tool for the RuneScape archaeology skill."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [
    {name = "Peter Schaedler", email = "pwschaedler@gmail.com"}
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "yapf==0.32.0",
    "mypy==0.971",
    "pylint==2.14.5",
    "isort==5.10.1",
    "pre-commit"
]
test = [
    "pytest==7.1.2",
    "pytest-cov==3.0.0"
]

[project.scripts]
rs-archeology-helper = "rs_arch.cli:cli"

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "--cov=src"

[tool.yapf]
based_on_style = "facebook"
column_limit = 88
allow_split_before_dict_value = false
indent_dictionary_value = false

[tool.pylint.messages_control]
disable = [
    "C0114",
    "W2301"
]

[tool.pylint.basic]
good-names = "f"
