[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rs-archaeology-helper"
description = "Helper tool for the RuneScape archaeology skill."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [
    {name = "Peter Schaedler", email = "pwschaedler@gmail.com"}
]
dynamic = ["version"]
dependencies = [
    "beautifulsoup4",
    "questionary",
    "requests"
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pylint",
    "isort",
    "pre-commit",
    "pytest",
    "coverage[toml]",
    "types-requests"
]

[project.scripts]
rs-archeology-helper = "rs_arch.cli:cli"

[tool.setuptools_scm]

[tool.black]
skip-string-normalization = true

[tool.coverage.run]
source = ["src"]

[tool.pylint.messages_control]
disable = [
    "C0114",
    "W2301"
]

[tool.pylint.basic]
good-names = "f"
