[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rs-archaeology-helper"
description = "Helper tool for the RuneScape archaeology skill."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [
    {name = "Peter Schaedler", email = "pwschaedler@gmail.com"}
]
dynamic = ["version"]
dependencies = [
    "beautifulsoup4",
    "questionary",
    "requests"
]

[project.optional-dependencies]
# Many of these pinned to match pre-commit with GitHub actions
dev = [
    "black==22.12.0",
    "mypy==0.971",
    "pylint==2.15.9",
    "isort==5.10.1",
    "pre-commit",
    "pytest==7.1.2",
    "coverage[toml]",
    "types-requests==2.28.11.6",
    "types-beautifulsoup4==4.11.6.1"
]

[project.scripts]
rs-archeology-helper = "rs_arch.cli:cli"

[tool.setuptools.package-data]
rs_arch = ["py.typed"]

[tool.setuptools_scm]

[tool.black]
skip-string-normalization = true

[tool.coverage.run]
source = ["src"]

[tool.pylint.reports]
score = "n"

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "W2301"   # unnecessary-ellipsis
]

[tool.pylint.basic]
good-names = ["f", "fp"]
